--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/circonus-labs/cup"
   },
   "dependencies": {
+    "async": ">=0.9.0",
     "minimist": ">=1.1.0"
   }
 }
