--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": ">=0.9.0",
+    "circonusapi2": ">=0.1.6",
     "minimist": ">=1.1.0",
     "jsonfile": ">=2.0.0"
   }
