--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "async": ">=0.9.0",
     "circonusapi2": ">=0.1.6",
     "minimist": ">=1.1.0",
-    "jsonfile": ">=2.0.0"
+    "jsonfile": ">=2.0.0",
+    "sprintf": ">=0.1.5"
   }
 }
