--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "async": ">=0.9.0",
     "circonusapi2": ">=0.1.6",
+    "heredoc": ">=1.3.0",
     "minimist": ">=1.1.0",
     "jsonfile": ">=2.0.0",
     "sprintf": ">=0.1.5"
