--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "circonusapi2": ">=0.1.6",
     "heredoc": ">=1.3.0",
     "minimist": ">=1.1.0",
+    "moment": ">=2.9.0",
     "jsonfile": ">=2.0.0",
     "sprintf": ">=0.1.5"
   }
