--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "async": ">=0.9.0",
     "circonusapi2": ">=0.1.6",
     "heredoc": ">=1.3.0",
+    "interrogator": ">=0.0.3",
+    "jsonfile": ">=2.0.0",
     "minimist": ">=1.1.0",
     "moment": ">=2.9.0",
-    "jsonfile": ">=2.0.0",
-    "sprintf": ">=0.1.5"
+    "sprintf": ">=0.1.5",
+    "validator": ">=3.32.0"
   }
 }
