--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./bin/circonus-setup",
   "repository": {
     "type": "git",
-    "url": "https://github.com/circonus-labs/cup"
+    "url": "https://github.com/circonus-labs/leo"
   },
   "dependencies": {
     "async": ">=0.9.0",
